# app/Models/Profile.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace App\Models;
+
+use Database\Factories\ProfileFactory;
+use Illuminate\Database\Eloquent\Attributes\Fillable;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
+
+#[Fillable(['user_id', 'phone'])]
+class Profile extends Model
+{
+    /** @use HasFactory<ProfileFactory> */
+    use HasFactory;
+
+    public function user(): BelongsTo
+    {
+        return $this->belongsTo(User::class);
+    }
+}
